19 January 2009

* An error in a command sequence now stops execution of that sequence.
  Internally, each command code now passes a return code back rather than
  talking to the calling client (if any) directly.
* attach-session now tries to start the server if it isn't already started - if
  no sessions are created in .tmux.conf this will cause an error.
* Clean up starting server by making initial client get a special socketpair.

18 January 2009

* Unbreak UTF-8.
* -a flag to next-window and previous-window to select the next or previous 
  window with activity or bell. Bound to M-n and M-p.
* find-window command to search window names, titles and visible content (but
  not history) for a string. If only one is found, the window is selected
  otherwise a choice list is shown. This (as with the other choice commands)
  only works from a key. Bound to "f" by default.
* Cleaned up command printing code, also enclose arguments with spaces in "s.
* Added command sequences. These are entered by separating each argument by a ;
  argument (spaces on both sides), for example:

	lsk ; lsc

  To use a literal ; as the argument prefix it with \, for example:

	bind x lsk \; lsc

  Commands are executed from left to right. Also note that command sequences do
  not support repeat-time repetition unless all commands making up the sequence
  support it.
* suspend-client command to suspend a client. Don't try to background it
  though...
* Mark attached sessions in sessions lists. Suggested by Simon Kuhnle.

17 January 2009

* tmux 0.6 released.

15 January 2009

* Support #H for hostname and #S for session name in status-left/right.
* Two new commands, choose-window and choose-session which work only when bound
  to a key and allow the window or session to be selected from a list. These
  are now bound to "w" and "s" instead of the list commands.

14 January 2009

* Rework the prefix-time stuff. The option is now called repeat-time and