@@ -1,5 +1,7 @@
 19 January 2009
 
+* Use reverse attributes for clock and cursor, otherwise they do not
+  appear on black and white terminals.
 * An error in a command sequence now stops execution of that sequence.
   Internally, each command code now passes a return code back rather than
   talking to the calling client (if any) directly.
@@ -967,7 +969,7 @@
   (including mutt, emacs). No status bar yet and no key remapping or other
   customisation.
 
-$Id: CHANGES,v 1.222 2009-01-19 18:23:40 nicm Exp $
+$Id: CHANGES,v 1.223 2009-01-19 19:01:11 nicm Exp $
 
  LocalWords:  showw utf UTF fulvio ciriaco joshe OSC APC gettime abc DEF OA clr
  LocalWords:  rivo nurges lscm Erdely eol smysession mysession ek dstname RB ms
